--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           >
         </p>
         <p id="designation">
-          Fresh Graduate<br /><span id="college"
+          Helpdesk Technician<br /><span id="college"
             ></span
           >
         </p>
@@ -67,18 +67,15 @@
           >
 
         </p>
-        <p id="telephone">Telephone<br /><strong>085158022839</strong></p>
+        <p id="telephone">Telephone<br /><strong>08999218725</strong></p>
         <p id="telephone">WhatsApp<br /><strong>089637823959</strong></p>
         <p id="more-about">
           Profil Pribadi<br /><span
-            >Saya memiliki kepribadian yang punya
-rasa ingin tahu tinggi, hal baru yang saya
-temui akan saya pelajari. Kemampuan
-saya adalah membuat simulasi jaringan
-menggunakan cisco packet tracer,
-mengkonfigurasi router mikrotik.
-Pengalaman saya mengikuti pelatihan
-Cyber Security Analyst.</span
+            >Lulusan Teknik Komputer dan Jaringan memiliki pengalaman magang di perusahaan yang bergerak
+            di bidang Photocopy & Printer Technology dan pengalaman bekerja di perusahaan Telekomunikasi.
+            Menguasai pengetahuan komputer, routing, subnetting, DNS server, Web server, DHCP server,
+            VLAN, dan mikrotik. Saya adalah seorang yang senang akan hal baru, saya dapat bekerja dengan
+            baik dalam lingkungan team atau individu, dan dapat bekerja dibawah tekanan.</span
           >
 
       </div>
@@ -89,20 +86,41 @@ Cyber Security Analyst.</span
         <!-- =========== CARD EXPERINCE =========== -->
         <div class="card" >
           <p>
-            <i class="fas fa-briefcase stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Pengalaman Magang
+            <i class="fas fa-briefcase stroke-transparent"></i>&nbsp;&nbsp;&nbsp; Riwayat Pengalaman
+          </p>
+          <i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pekerjaan
           </p>
           <ul id="listWorkExperience">
             <li>
               <p class="tags">
-                PT. Hade Multi Solusi<br /><span
-                  >Electronic Engineering |<span> Januari-Maret 2020</span></span>
-                  <p>- Memperbaiki mesin fotokopi<br>
-                    - Merekondisi mesin fotokopi<br>
-                    - Membersihkan mesin fotokopi
+                PT. Putra Mulia Telecommunication<br /><span
+                  >Helpdesk Project Indosat |<span> November 2021-NOW</span></span>
+                  <p>- Memastikan Work order diclose sesuai dengan Service level agreement<br>
+                    - Menggunakan tools monitoring Huawei iManager NetEco, iManager U2000<br>
+                    - Memastikan field technician memproses work order sampai case selesai<br>
+                    - Menjalankan matriks eskalasi sampai tingkat General Manager jika terdapat alarm critical<br>
+                    - Berhasil mencapai target Mean Time To Repair(MTTR) Work order<br>
                     </p>
               </p>
             </li>
           </ul>
+
+        </p>
+        <i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Magang
+        </p>
+        <ul id="listWorkExperience">
+          <li>
+            <p class="tags">
+              PT. Hade Multi Solusi<br /><span
+                >Staff Gudang |<span> Januari-Maret 2020</span></span>
+                <p>- Memperbaiki mesin fotokopi<br>
+                  - Merekondisi mesin fotokopi<br>
+                  - Berhasil merekondisi mesin fotokopi sesuai target dalam satu hari
+                  </p>
+            </p>
+          </li>
+        </ul>
+
           <!-- <a href="#" onclick="addWorkExperience(event)">+ Add work experience, including contracts and internships</a> -->
         </div>
 
@@ -117,7 +135,10 @@ Cyber Security Analyst.</span
               <p class="tags">
                 InfraDigital Foundation<br /><span
                   >Cyber Security Analyst |<span> Desember 2020</span></span>
-                  <p>-Mendapatkan Sertifikat CompTIA CySA+</p>
+                  <p>- Mengikuti pelatihan Cyber Security Analyst Junior Batch 3 yang diadakan oleh
+                    InfraDigital Foundation bersama Mastercard dalam rangka digitalisasi pendidikan.<br>
+                    - Berhasil lulus dalam exam CS0-002 dan mendapatkan sertifikat CompTIA CySA+.
+                  </p>
               </p>
             </li>
           </ul>
@@ -134,7 +155,11 @@ Cyber Security Analyst.</span
               <p class="tags">
                 SMKS Sandikta<br /><span
                   >Teknik Komputer dan Jaringan |<span> 2018-2021</span></span>
-                  <p>-Lulus tepat waktu</p>
+                  <p>- Lulus dengan nilai rata-rata 82,67.<br>
+                    - Berhasil dalam kegiatan uji kompetensi bersertifikasi LSP-P1 sebagai Network
+                    System Administrator dengan tugas konfigurasi sebuah wifi router mikrotik,
+                    hotspot dengan RADIUS, web proxy dan firewall pada bulan Mei 2021.
+                  </p>
               </p>
             </li>
           </ul>
